--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "@sendgrid/mail": "^7.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "ejs": "^3.1.5",
     "exceljs": "^4.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
     "mongoose": "^5.10.13",
+    "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.4.16",
     "otp-generator": "^2.0.0",
